crates/aglet-cli/tests/snapshots/add_show_edit__show_renders_provenance_for_subsumed_categories.snap
---
source: crates/aglet-cli/tests/add_show_edit.rs
assertion_line: 144
expression: show_run.stdout
---
id:         [uuid]
text:       Important task
status:     open
when:       -
created_at: [timestamp]
modified_at: [timestamp]
assignments:
  High | Manual | manual:cli.assign
    Assigned manually
  Priority | Subsumption | subsumption:High
    Inherited from child High
prereqs: (none)
dependents (blocks): (none)
related: (none)
